samples/_failures_safe/1761547191_dd7116_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8ed77b30.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_8ed77b30.c:132:5: error: expected identifier or ‘(’ at end of input
  132 |     for (int
      |     ^~~
./samples/SAFE/__tmp_8ed77b30.c:132:5: error: expected declaration or statement at end of input
